// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberField when no value provided renders input with value of empty string 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="testName"
  >
    testLabel
  </label>
  <input
    class="form-control"
    id="testName"
    name="testName"
    type="number"
    value=""
  />
</div>
`;

exports[`NumberField when value provided renders input with value 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="testName"
  >
    testLabel
  </label>
  <input
    class="form-control"
    id="testName"
    name="testName"
    type="number"
    value="1"
  />
</div>
`;
